Added registered user tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     regression: marker for regression tests
     login_guest: marker for guest login form tests
     product_page_promo: marker for product promo page tests
+    user: market for registered user tests
