--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     login_guest: marker for guest login form tests
     product_page_promo: marker for product promo page tests
     user: market for registered user tests
+    need_review: marker for peer review tests
